dinamically reading jars on .libs folder into the classpath